--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Stephen Howells
-description: "My thoughts on development, design, and culture. My opinions are purely my own and are pretty awesome."
+description: "Stephen Howells writes about coding, design, and life."
 url: "https://stephenhowells.net"
 twitter_username: stephenhowells
 github_username:  stephenhowells
