RSS format update, switch to Yarn

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: Stephen Howells
 description: "Stephen Howells writes about coding, design, and life."
 url: "https://stephenhowells.net"
+base_url: "StephenHowells.net"
 twitter_username: stephenhowells
 github_username:  stephenhowells
 
