--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://stephenhowells.net",
   "devDependencies": {
+    "bourbon-neat": "^2.0.0",
     "browser-sync": "^2.18.5",
     "child_process": "^1.0.2",
     "gulp": "^3.9.1",
