--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ rvm:
 install: gem install bundler && bundle install
 script: bundle exec jekyll build
 after_success: bundle exec s3_website push
+
+# safelist
+branches:
+  only:
+  - master
